updated name to SGE

--- a/src/scss/scoped.scss
+++ b/src/scss/scoped.scss
@@ -1,4 +1,4 @@
-.yasqe {
+.sge {
 	position: relative;
 
 	@import "cssIncludes/codemirror";
@@ -9,7 +9,7 @@
 
 	@import "./buttons.scss";
 	@import "./codemirrorMods.scss";
-	@import "./yasqe.scss";
+	@import "./sge.scss";
 
 
 
